# docker-maven-plugin

./: .codecov.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  HOWTO-RELEASE.md  Jenkinsfile  README.md  authentication.html  boot2docker-map-ports.sh  ci-docs.sh  circle.yml  docker-build.html  docker-logs.html  docker-push.html  docker-remove.html  docker-source.html  docker-start.html  docker-stop.html  docker-watch.html  external-configuration.html  global-configuration.html  goals.html  image-configuration.html  index.html  installation.html  links.html  pom.xml  registry-handling.html  release.groovy  release.sh  search_index.json
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: doc-build.yml  e2e-tests.yml  e2e-windows.yml  linux-mavenwrapper-build.yml  macos-mavenwrapper-build.yml  release-snapshots.yml  release.yml  sonar-pr-analysis-publish.yml  sonar-pr-request.yml  sonar-pr.yml  sonar.yml  test.yml  windows-build.yml  windows-mavenwrapper-build.yml
doc/: HowToUseDockerMavenPluginSnapshotArtifacts.md  changelog.md  ci-docs.sh  contributing.md  examples.md  howto-release.md  integration-tests.md  intro.md  manual.md  migration-0.9.x.md  readme-0.9.x.md  update_issue_links.sh
it/: README.md  pom.xml  test.xml
it/builder/builder-image/: CMakeLists.txt  pom.xml  static.cmake
it/builder/builder-image/src/assembly/: context.xml  rootfs.xml
it/builder/builder-image/src/main/c/: hello.c
it/builder/builder-image/src/main/docker/: Dockerfile
parent/: pom.xml
samples/: pom.xml
(+874 files in other folders)
